--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.CodeAnalysis" version="2.6.1" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.1" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.3" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.6.1" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.6.1" targetFramework="net46" />
@@ -14,7 +14,8 @@
   <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.25408" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.LanguageServices" version="2.6.1" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6071" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.10" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.SDK.Analyzers" version="15.8.36" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.27" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.15.0" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop" version="7.10.6071" targetFramework="net46" />
@@ -26,16 +27,17 @@
   <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30729" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6070" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50727" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Threading" version="15.0.240" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading" version="15.8.209" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.8.209" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Utilities" version="15.0.26201" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Validation" version="15.0.82" targetFramework="net46" />
-  <package id="Microsoft.VSSDK.BuildTools" version="15.7.104" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.3.15" targetFramework="net46" />
+  <package id="Microsoft.VSSDK.BuildTools" version="15.9.3032" targetFramework="net46" developmentDependency="true" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.2" targetFramework="net46" />
-  <package id="SQLitePCLRaw.core" version="1.1.2" targetFramework="net46" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.2" targetFramework="net46" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.2" targetFramework="net46" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.2" targetFramework="net46" />
-  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.2" targetFramework="net46" />
+  <package id="SQLitePCLRaw.core" version="1.1.12" targetFramework="net46" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.12" targetFramework="net46" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.12" targetFramework="net46" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.12" targetFramework="net46" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.12" targetFramework="net46" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net46" />
